2007-01-24 Sebastien Granjoux <seb.sfo@free.fr>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/debug-manager/debug_tree.c,
	plugins/debug-manager/debug_tree.h,
	plugins/debug-manager/watch.c:
	Partial rewrite of the variable object code, find and fix a few bugs
	Fix bug #395808: gdb can still crash but children are listed
	on request only so you can avoid the crash

2007-01-24  Naba Kumar  <naba@gnome.org>
	
	* (added) plugins/symbol-browser/anjuta-symbol-locals.c,
	(added) plugins/symbol-browser/anjuta-symbol-locals.h,
	plugins/symbol-browser/plugin.h,
	plugins/symbol-browser/plugin.c,
	plugins/symbol-browser/Makefile.am: Added current file (local)
	symbols view (Seriously getting bored with the browse toolbar).

2007-01-22  Naba Kumar  <naba@gnome.org>
	
	Patch from Gabor Kelemen:
	* po/POTFILES.in: Added .plugin.in files.

2007-01-21 Yang Hong <yanghong@ccoss.com.cn>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/document-manager/anjuta-docman.c,
	plugins/message-view/anjuta-msgman.c
	Set right alignment to the label widget in the tab title.

2007-01-21  Naba Kumar  <naba@gnome.org>
	
	* libegg/egg-combo-action.c: Fixed mode line.
	* manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml,
	manuals/reference/libanjuta/tmpl/plugins.sgml: Updated.

2007-01-21  Armin Burgmeier  <armin@arbur.net>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/class-gen/plugin.c: Prompt for target before actually
	generating the class files. This ensures that the files are created in
	the correct directory. Fixes bug #397406.

	* plugins/class-gen/window.c: Set browse buttons to insensitive when
	the class is added to the project.

2007-01-21  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin-description.c,
	libanjuta/anjuta-ui.h,
	libanjuta/anjuta-status.c,
	libanjuta/anjuta-plugin-description.h,
	libanjuta/cell-renderer-captioned-image.c,
	libanjuta/anjuta-plugin-handle.c,
	libanjuta/anjuta-status.h,
	libanjuta/resources.c,